--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,21 +45,24 @@ body {
 }
 
 .main-content-container {
+    margin: 25px;
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 5px 10px;
 }
 
-.child {
-height: 200px;
-width: 200px;
-background-color: tomato
-
+.main-content-container hr {
+    flex-basis: 100%;
+    border: none;
+    height: 0;
+    margin: 0;
 }
-
-.child-x {
-height: 200px;
-width: 200px;
-background-color: rgb(73, 46, 41)
+ 
+.content-container {
+    background-color: burlywood;
+    flex-grow: 1;
+    height: 300px;
 }
 
 a {
