--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 .navigation-bar {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
+    background-color: tomato;
     color: #ffffff;
 }
 
@@ -60,7 +60,6 @@ body {
 }
  
 .content-container {
-    background-color: burlywood;
     flex-grow: 1;
     padding: 25px;
     height: 250px;
